[package]
authors = ["user <veniaminhrapov@gmail.com>"]
edition = "2018"
name = "eq-treasury"
version = "0.1.0"


[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
safe-mix = {default-features = false, version = "1.0.0"}
serde = {version = "1.0.123", optional = true}
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-support = {workspace = true}
pallet-authorship = { workspace = true }
eq-primitives = { path = "../../eq-primitives", default-features = false }
eq-utils = { path = "../../eq-utils", default-features = false }
eq-whitelists = { path = "../eq-whitelists", default-features = false, optional = true }
eq-assets = { path = "../eq-assets", default-features = false }
eq-oracle = { path = "../eq-oracle", default-features = false, optional = true }
eq-balances = { path = "../eq-balances", default-features = false }
eq-rate = { path = "../eq-rate", default-features = false, optional = true }
eq-aggregates = { path = "../eq-aggregates", default-features = false }

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[features]
default = ["std"]
std = [
  "log/std",
  "codec/std",
  "frame-support/std",
  "safe-mix/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-arithmetic/std",
  "eq-primitives/std",
  "eq-utils/std",
  "eq-balances/std",
  "eq-aggregates/std",
  "eq-whitelists/std",
  "eq-oracle/std",
  "eq-assets/std",
  "sp-std/std",
  "serde",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "eq-oracle",
  "eq-rate/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
]
