[package]
authors = ["user <veniaminhrapov@gmail.com>"]
edition = "2018"
name = "eq-vesting"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
enumflags2 = {version = "0.6.2"}
serde = {version = "1.0.123", optional = true}
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
# Polkadot dependencies
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.29" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.29" }

[dependencies.sp-arithmetic]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"
package = "frame-system"

[dependencies.frame-benchmarking]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"
optional = true
package = "frame-benchmarking"

[dependencies.eq-assets]
default-features = false
package = "eq-assets"
path = "../eq-assets"
version = "0.1.0"

[dependencies.eq-balances]
default-features = false
package = "eq-balances"
path = "../eq-balances"
version = "0.1.0"

[dependencies.eq-oracle]
default-features = false
package = "eq-oracle"
path = "../eq-oracle"
version = "0.1.0"
optional=true

[dependencies.eq-utils]
default-features = false
package = "eq-utils"
path = "../../eq-utils"
version = "0.1.0"

[dependencies.eq-primitives]
default-features = false
package = "eq-primitives"
path = "../../eq-primitives"
version = "0.1.0"

[dependencies.eq-aggregates]
default-features = false
package = "eq-aggregates"
path = "../eq-aggregates"
version = "0.1.0"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dev-dependencies.sp-storage]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dependencies.eq-whitelists]
default-features = false
package = "eq-whitelists"
path = "../eq-whitelists"
version = "0.1.0"
optional = true

[dev-dependencies]
hex-literal = "0.3"


[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "eq-whitelists",
  "eq-oracle",
]
std = [
  "log/std",
  "serde",
  "codec/std",
  "sp-arithmetic/std",
  "sp-std/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "eq-balances/std",
  "eq-oracle/std",
  "eq-utils/std",
  "eq-primitives/std",
  "eq-aggregates/std",
  "eq-assets/std",
  "eq-whitelists/std",
  "xcm/std",
  "xcm-executor/std",
]
production = []
try-runtime = [
  "frame-support/try-runtime",
]
